# ai_product_enricher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  SERVER_MANAGEMENT.md  docker-compose.yml  manage_server.sh  pyproject.toml  start_server.sh
config/fields/: default.yaml
config/fields/custom/: custom.yaml
config/profiles/: default.yaml
config/prompts/system/: default.yaml  russian_products.yaml
config/prompts/user/: default.yaml
docs/: API_USAGE.md  WEBUI_GUIDE.md  api.md  plan_improvment_PRD.md
src/ai_product_enricher/: __init__.py  main.py  main_webui.py
src/ai_product_enricher/api/: __init__.py  dependencies.py  router.py
src/ai_product_enricher/api/v1/: health.py  products.py
src/ai_product_enricher/core/: __init__.py  config.py  exceptions.py  logging.py
src/ai_product_enricher/engine/: __init__.py  config_manager.py  field_registry.py  prompt_engine.py
src/ai_product_enricher/models/: __init__.py  common.py  enrichment.py  product.py
src/ai_product_enricher/services/: __init__.py  cache.py  cloudru_client.py  enricher.py  llm_base.py  zhipu_client.py
src/ai_product_enricher/webui/: __init__.py  app.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_cache.py  test_cloudru_client.py  test_config_manager.py  test_enricher.py  test_field_registry.py  test_models.py  test_prompt_engine.py  test_zhipu_client.py
